// Vitest Snapshot v1

exports[`<Button/> > should render a danger button 1`] = `
<div>
  <div>
    <button
      class="_wrap_1hyw7_54 _danger_1hyw7_72"
      data-testid=""
      type="button"
    >
      Button
    </button>
  </div>
</div>
`;

exports[`<Button/> > should render a success button 1`] = `
<div>
  <div>
    <button
      class="_wrap_1hyw7_54 _success_1hyw7_76"
      data-testid=""
      type="button"
    >
      Button
    </button>
  </div>
</div>
`;

exports[`<Button/> > should render a text button 1`] = `
<div>
  <div>
    <button
      class="_wrap_1hyw7_54 _text_1hyw7_80"
      data-testid=""
      type="button"
    >
      Button
    </button>
  </div>
</div>
`;
